--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/ansteh/convkeys/issues"
   },
   "dependencies": {
+    "bluebird": "^3.4.1",
     "convnetjs": "^0.3.0",
     "load-json-file": "^2.0.0",
     "lodash": "^4.13.1"
