--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "convnetjs": "^0.3.0",
+    "leven": "^2.0.0",
     "load-json-file": "^2.0.0",
     "lodash": "^4.13.1"
   },
